swagger updates till user all jobs
